# hello_dejango-assessment

./: db.sqlite3  manage.py  pyproject.toml
hello_app/: views.py
hello_dejango/: asgi.py  settings.py  urls.py  wsgi.py
