[tool.poetry]
name = "newapp"
version = "0.1.0"
description = "Hello Dejango"
authors = ["Edwin Torres <edwin_torres@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
